correct z-index to acordeon

--- a/assets/css/medias.css
+++ b/assets/css/medias.css
@@ -160,6 +160,7 @@
     .acordeon.open {
         width: 100%;
         top: 20.6rem;
+        z-index: 250;
     }
 
     .prof-content {
